--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ license_file: LICENSE.txt
 description: Converters from str to another type.
 long_description: file:README.md,CHANGELOG.md
 long_description_content_type: text/markdown
-# keywords:
+keywords: type converters
 
 [options]
 python_requires: >=3.8
